other-vpol/limit-hostpath-vols/.kyverno-test-exceptions/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pods-all
  namespace: policy-exceptions
spec:
  containers:
  - name: app
    image: busybox:1.35
  volumes:
  - name: allowed-hostpath
    hostPath:
      path: /etc
