other-vpol/limit-hostpath-vols/.kyverno-test-exceptions/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: limit-hostpath-vols-exceptions
policies:
- ../limit-hostpath-vols.yaml
resources:
- resource.yaml
exceptions:
- ../.kyverno-test/exceptions.yaml
results:
- isValidatingPolicy: true
  kind: Pod
  policy: limit-hostpath-vols
  resources:
  - policy-exceptions/bad-pods-all
  result: pass
